Update views + css

--- a/PhotoSharingApplicacion/Views/Home/Index.cshtml
+++ b/PhotoSharingApplicacion/Views/Home/Index.cshtml
@@ -1,31 +1,14 @@
 ﻿
 @{
-    Layout = null;
+    ViewBag.Title = "Welcome to Adventure Works Photo Sharing";
 }
 
-<!DOCTYPE html>
+<p>
+    Welcome to Adventure Works Photo
+    sharing! Use this site to share
+    your adventures.
+</p>
+<h2>Latest Photos</h2>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>
-        Welcome to Adventure Works
-        Photo Sharing
-    </title>
-</head>
-<body>
-    <div>
-
-        <p>
-            Welcome to Adventure Works Photo
-            sharing! Use this site to share
-            your adventures.
-        </p>
-        <h2>Latest Photos</h2>
-
-        @Html.Action("_PhotoGallery",
+@Html.Action("_PhotoGallery",
 "Photo", new { number = 3 })
-
-    </div>
-</body>
-</html>
