--- a/PhotoSharingApplicacion/Views/Photo/Display.cshtml
+++ b/PhotoSharingApplicacion/Views/Photo/Display.cshtml
@@ -1,35 +1,29 @@
 ﻿@model PhotoSharingApplicacion.Models.Photo
 
-<!DOCTYPE html>
+@{
+    ViewBag.Title = Model.Title;
+}
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Photo: @Model.Title </title> 
-</head>
-<body>
-    <div>
-        <h2>
-            "@Model.Title"</h2>
-            <img width="800" src="@Url.Action("GetImage", "Photo", new { id = Model.PhotoId })" />
-            <p>
-                @Html.DisplayFor(
-                model =>
-                model.Description)
-            </p>
-            <p>
-                @Html.DisplayNameFor(model => model.UserName):
-                @Html.DisplayFor(model => model.UserName)
-            </p>
-            <p>
-                @Html.DisplayNameFor(
-                model => model.CreatedDate):
-                @Html.DisplayFor(
-                model => model.CreatedDate)
-            </p>
-            <p>
-                @Html.ActionLink("Back to List", "Index")
-            </p>
-    </div>
-</body>
-</html>
+<h2>
+    "@Model.Title"
+</h2>
+<img width="800" src="@Url.Action("GetImage", "Photo", new { id = Model.PhotoId })" />
+<p>
+    @Html.DisplayFor(
+    model =>
+    model.Description)
+</p>
+<p>
+    @Html.DisplayNameFor(model => model.UserName):
+    @Html.DisplayFor(model => model.UserName)
+</p>
+<p>
+    @Html.DisplayNameFor(
+    model => model.CreatedDate):
+    @Html.DisplayFor(
+    model => model.CreatedDate)
+</p>
+<p>
+    @Html.ActionLink("Back to List", "Index")
+</p>
+
